# tech_m_cxo

./: .gitignore  Untitled-1.json  app.py  crawl_links.csv  polling.py  preprocessing_raw.py  pyvenv.cfg  readme.md
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.js  zzz-notes.txt
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/api/get_all_pois/: route.js
frontend/src/app/api/get_poi/: route.js
frontend/src/app/cases/: Data_table.js  page.js
frontend/src/app/components/: Add_poi_form.js  Crawl_sites.js  Footer.js  Navbar.js  Show_all_pois.js
frontend/src/app/results/: Data_table.js  page.js  show_data.js
react_dev/: package-lock.json  package.json  tailwind.config.js
react_dev/src/app/: layout.js
react_dev/src/app/components/: Footer.js  Navbar.js
react_dev/src/app/crawl-sites/: page.js
react_dev/src/app/results/: page.js  show_data.js
scrape_server/: .gitignore  README.md  aws_functions.py  face_check_processor.py  mongo.py  playwright_scraper.py  process_files.py  pyproject.toml  server.py
scrape_server/tests/: test.py
