[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["shrey19702 <shrey19702@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
playwright = "^1.48.0"
motor = "^3.6.0"
aiohttp = "^3.10.10"
aioboto3 = "^13.4.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
